# QGLLearning

./: .gitignore  hardClean.sh  install.sh  installKDev.sh  readme.txt  softClean.sh
doxygen/: Doxyfile
src/: CMakeLists.txt  blending.cpp  color4f.cpp  color4f.h  cube.cpp  cube.h  figure.cpp  figure.h  glcubeblendingfullparam.cpp  glcubeblendingfullparam.h  glcubeblendinglessparam.cpp  glcubeblendinglessparam.h  gldoublequadblendingfullparam.cpp  gldoublequadblendingfullparam.h  gldoublequadblendinglessparam.cpp  gldoublequadblendinglessparam.h  glquadblending.cpp  glquadblending.h  gltriplequadblendingfullparam.cpp  gltriplequadblendingfullparam.h  gltriplequadblendinglessparam.cpp  gltriplequadblendinglessparam.h  glwidget.cpp  glwidget.h  learning.cpp  learning.h  learningchoicewidget.cpp  learningchoicewidget.h  learningcubeblendingfullparam.cpp  learningcubeblendingfullparam.h  learningcubeblendinglessparam.cpp  learningcubeblendinglessparam.h  learningdoublequadblendingfullparam.cpp  learningdoublequadblendingfullparam.h  learningdoublequadblendinglessparam.cpp  learningdoublequadblendinglessparam.h  learningmanager.cpp  learningmanager.h  learningquadblending.cpp  learningquadblending.h  (+44 more)
